[package]
name = "rusty_port_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
dashmap = "5"
smol = "1.3"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "net"]

[dependencies.clap]
version = "4.1.4"
features = ["derive"]

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports", "async_smol"]}
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }

[lib]
bench = false

[[bin]]
name = "rusty_port_scanner"
bench = false

[[bench]]
name = "all_port_bench"
harness = false

[profile.release]
debug = true
