[package]
name = "rtcps"
description = "Rust TCP Scanner"
version = "0.1.0"
keywords = ["port", "scanning", "nmap"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
dashmap = "5"
smol = "1.3"
expanduser = "1.2.2"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "net"]

[dependencies.clap]
version = "4.1.4"
features = ["derive"]

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports", "async_smol"]}
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }
hyper = { version = "0.14", features = ["server", "tcp", "http2"] }

[lib]
bench = false

[[bin]]
name = "rtcps"
bench = false

[[bench]]
name = "all_port_bench"
harness = false

[profile.release]
debug = true
